--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#services">Services</a></li>
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+<!--           <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -527,7 +527,7 @@
     </div>
   </section><!-- End Services Section -->
 
-  <!-- ======= Portfolio Section ======= -->
+  <!-- ======= Portfolio Section ======= 
   <section id="portfolio" class="portfolio">
     <div class="container">
 
@@ -678,7 +678,7 @@
       </div>
 
     </div>
-  </section><!-- End Portfolio Section -->
+  </section> End Portfolio Section -->
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
