--- a/index.html
+++ b/index.html
@@ -701,7 +701,8 @@
 
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
-            <i class="bx bx-share-alt"></i>
+<!--             <i class="bx bx-share-alt"></i> -->
+            <i class="bi bi-twitter"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
