--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Emily Jones</a></h1>
+      <h1><a href="index.html">Pouria Azad</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
@@ -60,10 +60,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/pouria-azad-a26b78226/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/pouria-azad" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://persiansmastodon.com/@pouria_azad" class="mastodon"><i class="bi bi-mastodon"></i></a>
+        <a href="https://t.me/Pouria_Azad" class="telegram"><i class="bi bi-telegram"></i></a>
       </div>
 
     </div>
@@ -712,10 +712,10 @@
         </a>
         </div>
 
-        <div class="col-md-6 d-flex align-items-stretch">
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
 <!--             <i class="bx bx-share-alt"></i> -->
-            <a href="https://t.me/pouria-azad">
+            <a href="https://t.me/Pouria_Azad">
             <i class="bx bi-telegram"></i>
             <h3>My Telegram</h3>
             <p>@pouria-azad</p>
