--- a/index_per.html
+++ b/index_per.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pouria Azad</title>
+  <title>پوریا آزاد</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
   ======================================================== -->
 </head>
 
-<body>
+<body style="direction: rtl;">
 
   <!-- ======= Header ======= -->
   <header id="header">
@@ -50,12 +50,12 @@
       <h2>I'm a passionate <span>backend developer</span> from Iran</h2>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link active" href="#header">Home</a></li>
-          <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="#resume">Resume</a></li>
+          <li><a class="nav-link active" href="#header">صفحه اول</a></li>
+          <li><a class="nav-link" href="#about">درباره</a></li>
+          <li><a class="nav-link" href="#resume">رزومه</a></li>
           <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
           <!--           <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
-          <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a class="nav-link" href="#contact">ارتباط</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -77,8 +77,8 @@
     <div class="about-me container">
 
       <div class="section-title">
-        <h2>About</h2>
-        <p>Learn more about me</p>
+        <h2>درباره</h2>
+        <p>اطلاعات بیشتر درباره من</p>
       </div>
 
       <div class="row">
@@ -95,10 +95,10 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>13 Oct 2001</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>pouria-azad.ir</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+98 990 859 5090</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>State:</strong> <span>Khorasan Razavi, Iran</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>تاریخ تولد:</strong> <span>21 مهر 1380</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>وبسایت:</strong> <span style="direction: ltr;">pouria-azad.ir</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>شماره تماس:</strong> <span style="direction: ltr;">+98 990 859 5090</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>استان:</strong> <span>خراسان رضوی</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -161,10 +161,10 @@
     <div class="skills container">
 
       <div class="section-title">
-        <h2>Skills</h2>
+        <h2>مهارت ها</h2>
       </div>
 
-      <div class="row skills-content">
+      <div style="direction: ltr;"   class="row skills-content">
 
         <div class="col-lg-6">
 
@@ -343,9 +343,9 @@
               <h4>Ceo &amp; Founder</h4>
             </div>
           </div> -->
-          <!-- End testimonial item -->
+    <!-- End testimonial item -->
 
-          <!-- <div class="swiper-slide">
+    <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -357,9 +357,9 @@
               <h4>Freelancer</h4>
             </div>
           </div> -->
-          <!-- End testimonial item -->
+    <!-- End testimonial item -->
 
-          <!-- <div class="swiper-slide">
+    <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -371,15 +371,15 @@
               <h4>Entrepreneur</h4>
             </div>
           </div> -->
-          <!-- End testimonial item -->
-          <p></p>
-        </div>
-        <div class="swiper-pagination"></div>
-      </div>
+    <!-- End testimonial item -->
+    <p></p>
+    </div>
+    <div class="swiper-pagination"></div>
+    </div>
 
-      <div class="owl-carousel testimonials-carousel">
+    <div class="owl-carousel testimonials-carousel">
 
-      </div>
+    </div>
 
     </div><!-- End Testimonials  -->
 
@@ -388,7 +388,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>About projects</h2>
+        <h2>پروژه ها</h2>
       </div>
 
       <div class="row">
@@ -399,10 +399,9 @@
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>UniCoursePlanner</h3>
             </a>
-            <h6 class="mt-1">This Python program is used for scheduling the presence of university professors using the
-              CSP forward checking algorithm. It generates possible weekly schedules for professors in the form of HTML
-              output files, ensuring there are no conflicts and includes professors' availability hours at the
-              university.
+            <h6 class="mt-1">این برنامه پایتون برای برنامه‌ریزی حضور اساتید دانشگاه با استفاده از الگوریتم
+              CSP_Forward_Checking استفاده می‌شود و برنامه‌های هفتگی ممکن برای اساتید با خروجی .html تولید می‌کند که
+              تداخلی نداشته باشند و شامل ساعت‌های حضور اساتید در دانشگاه است.
             </h6>
           </div>
         </div>
@@ -424,8 +423,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Resume</h2>
-        <p>Check My Resume</p>
+        <h2>رزومه</h2>
+        <p>رزومه فعالیت من</p>
       </div>
 
       <!-- <div class="row">
@@ -445,18 +444,18 @@
             </p>
           </div> -->
 
-      <h3 class="resume-title">Education</h3>
+      <h3 class="resume-title">تحصیلات</h3>
       <div class="resume-item">
-        <h4>Bachelor's degree, Computer Engineering</h4>
-        <h5>2020 - 2024</h5>
-        <p><em>Hakim Sabzevari University</em></p>
+        <h4>کارشناس مهندسی کامپیوتر</h4>
+        <h5>1399 - تاکنون</h5>
+        <p><em>دانشگاه حکیم سبزواری</em></p>
         <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
               ut dignissimos deleniti nerada porti sand markend</p> -->
       </div>
       <div class="resume-item">
-        <h4>Diploma of Education, Mathematics</h4>
-        <h5>2017 - 2020</h5>
-        <p><em>Dr. Danesh High School</em></p>
+        <h4>دیپلم رشته ریاضی</h4>
+        <h5>1396 - 1399</h5>
+        <p><em>دبیرستان نمونه دولتی دکتر دانش</em></p>
         <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
               unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila -->
         </p>
@@ -723,8 +722,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Contact</h2>
-        <p>Contact Me</p>
+        <h2>ارتباط</h2>
+        <p>ارتباط با من</p>
       </div>
 
       <div class="row mt-2">
@@ -744,8 +743,8 @@
             <!--            <i class="bx bx-phone-call"></i> -->
             <a href="https://www.linkedin.com/in/pouria-azad/">
               <i class="bx bi-linkedin"></i>
-              <h3>My Linkedin</h3>
-              <p>pouria-azad</p>
+              <h3>لینکدین من</h3>
+              <p style="direction: ltr;">pouria-azad</p>
           </div>
           </a>
         </div>
@@ -755,8 +754,8 @@
             <!--             <i class="bx bx-share-alt"></i> -->
             <a href="https://t.me/Pouria_Azad">
               <i class="bx bi-telegram"></i>
-              <h3>My Telegram</h3>
-              <p>@pouria-azad</p>
+              <h3>تلگرام من</h3>
+              <p style="direction: ltr;">@pouria-azad</p>
           </div>
           </a>
         </div>
@@ -766,8 +765,8 @@
             <!--            <i class="bx bx-envelope"></i> -->
             <a href="https://github.com/pouria-azad">
               <i class="bx bi-github"></i>
-              <h3>My Github</h3>
-              <p>pouria-azad</p>
+              <h3>گیتهاب من</h3>
+              <p style="direction: ltr;">pouria-azad</p>
           </div>
           </a>
         </div>
@@ -775,8 +774,8 @@
           <div class="info-box">
             <a href="https://persiansmastodon.com/@pouria_azad">
               <i class="bx bi-mastodon"></i>
-              <h3>My Mastodon</h3>
-              <p>@pouria_azad@persiansmastodon.com</p>
+              <h3>ماستادون من</h3>
+              <p style="direction: ltr;">@pouria_azad@persiansmastodon.com</p>
           </div>
           </a>
         </div>
@@ -786,8 +785,8 @@
             <!--            <i class="bx bx-envelope"></i> -->
             <a href="mailto:pooria.azad53@gmail.com">
               <i class="bx bi-github"></i>
-              <h3>Email Me</h3>
-              <p>pooria.azad53@gmail.com</p>
+              <h3>ایمیل</h3>
+              <p style="direction: ltr;">pooria.azad53@gmail.com</p>
           </div>
           </a>
         </div>
@@ -796,8 +795,8 @@
           <div class="info-box">
             <a href="tel:+989908595090">
               <i class="bx bx-phone-call"></i>
-              <h3>Call Me</h3>
-              <p>+98 990 859 5090</p>
+              <h3>شماره تماس</h3>
+              <p style="direction: ltr;">+98 990 859 5090</p>
           </div>
         </div>
         </a>
