--- a/index_per.html
+++ b/index_per.html
@@ -44,10 +44,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Pouria Azad</a></h1>
+      <h1><a href="index.html">پوریا آزاد</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>backend developer</span> from Iran</h2>
+      <h2>من یک  <span>backend developer</span> هستم.</h2>
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">صفحه اول</a></li>
@@ -95,20 +95,20 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>تاریخ تولد:</strong> <span>21 مهر 1380</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>وبسایت:</strong> <span style="direction: ltr;">pouria-azad.ir</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>شماره تماس:</strong> <span style="direction: ltr;">+98 990 859 5090</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>استان:</strong> <span>خراسان رضوی</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>تاریخ تولد: </strong> <span>21 مهر 1380</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>وبسایت: </strong> <span style="direction: ltr;">pouria-azad.ir</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>شماره تماس: </strong> <span style="direction: ltr;">+98 990 859 5090</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>استان: </strong> <span>خراسان رضوی</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li> -->
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
+                <li><i class="bi bi-chevron-right"></i> <strong>مدرک: </strong> <span> دانشجو کارشناسی مهندسی کامپیوتر </span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>ایمیل: </strong>
                   <span>pooria.azad53@gmail.com</span>
                 </li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+              <!--  <li><i class="bi bi-chevron-right"></i> <strong>کار فریلنس:</strong> <span>Available</span></li> -->
               </ul>
             </div>
           </div>
@@ -141,7 +141,7 @@
             <i class="bi bi-journal-richtext"></i>
             <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1"
               class="purecounter"></span>
-            <p>Projects</p>
+            <p>تعداد پروژه ها</p>
           </div>
         </div>
 
