--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
           <!--           <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
           <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a class="nav-link" href="./index_per.html">صفحه فارسی</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
