--- a/index_per.html
+++ b/index_per.html
@@ -89,10 +89,9 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Backend Developer</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua.
+             یک برنامه نویس و دانشجوی خلاق و کنجکاو کامپیوتر که بدنبال یادگیری دانش و کشف چیزهای جدیده 🚀
           </p>
+          <br>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -113,12 +112,12 @@
               </ul>
             </div>
           </div>
-          <p>
+          <!-- <p>
             Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut.
             Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
             Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
             Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-          </p>
+          </p> -->
         </div>
       </div>
 
