--- a/index_per.html
+++ b/index_per.html
@@ -89,7 +89,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Backend Developer</h3>
           <p class="fst-italic">
-             یک برنامه نویس و دانشجوی خلاق و کنجکاو کامپیوتر که بدنبال یادگیری دانش و کشف چیزهای جدیده 🚀
+             یک برنامه نویس و دانشجوی خلاق و کنجکاو کامپیوتر که بدنبال یادگیری دانش و کشف چیزهای جدیده 🚀.
           </p>
           <br>
           <div class="row">
