update email icon

--- a/index_per.html
+++ b/index_per.html
@@ -784,7 +784,7 @@
           <div class="info-box">
             <!--            <i class="bx bx-envelope"></i> -->
             <a href="mailto:pooria.azad53@gmail.com">
-              <i class="bx bi-github"></i>
+              <i class="bx bx-mail-send"></i>
               <h3>ایمیل</h3>
               <p style="direction: ltr;">pooria.azad53@gmail.com</p>
           </div>
