--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
           <div class="info-box">
             <!--            <i class="bx bx-envelope"></i> -->
             <a href="mailto:pooria.azad53@gmail.com">
-              <i class="bx bi-github"></i>
+              <i class="bx bx-mail-send"></i>
               <h3>Email Me</h3>
               <p>pooria.azad53@gmail.com</p>
           </div>
