--- a/index_per.html
+++ b/index_per.html
@@ -7,7 +7,7 @@
 
   <title>پوریا آزاد</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="pouria-azad pouria azad پوریا آزاد" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
