update meta description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Pouria Azad</title>
-  <meta content="" name="description">
+  <meta content="This is a resume website for Pouria Azad, where you can find his work experience, activities, and contact links." name="description">
   <meta content="pouria-azad pouria azad پوریا آزاد" name="keywords">
 
   <!-- Favicons -->
