--- a/index_per.html
+++ b/index_per.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>پوریا آزاد</title>
-  <meta content="" name="description">
+  <meta content="اینجا یک وبسایت رزومه به نام پوریا آزاد وجود دارد که در آن جزئیات سوابق کاری، فعالیت‌ها و پیوندهای ارتباطی پوریا آزاد قرار داده شده است. در این سایت می‌توانید بازدیدی از سوابق، انجام‌ها و اطلاعات تماس با پوریا آزاد داشته باشید." name="description">
   <meta content="pouria-azad pouria azad پوریا آزاد" name="keywords">
 
   <!-- Favicons -->
