update meta links

--- a/index_per.html
+++ b/index_per.html
@@ -6,12 +6,12 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>پوریا آزاد</title>
-  <meta content="اینجا یک وبسایت رزومه به نام پوریا آزاد وجود دارد که در آن جزئیات سوابق کاری، فعالیت‌ها و پیوندهای ارتباطی پوریا آزاد قرار داده شده است. در این سایت می‌توانید بازدیدی از سوابق، انجام‌ها و اطلاعات تماس با پوریا آزاد داشته باشید." name="description">
+  <meta content="اینجا وب سایت رسمی پوریا آزاد هست که در آن جزئیات سوابق کاری، فعالیت‌ها و پیوندهای ارتباطی پوریا آزاد قرار داده شده است. در این سایت می‌توانید بازدیدی از سوابق، انجام‌ها و اطلاعات تماس با پوریا آزاد داشته باشید." name="description">
   <meta content="pouria-azad pouria azad پوریا آزاد" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png" type="image/png">
 
   <!-- Google Fonts -->
   <link
