--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <meta content="pouria-azad pouria azad پوریا آزاد" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png" type="image/png">
+  
 
   <!-- Google Fonts -->
   <link
