--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.jpg" class="img-fluid" alt="">
+          <img src="assets/img/me.jpg" class="img-fluid" alt="pouria azad پوریا آزاد">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Backend Developer</h3>
