add youtube channel and add databaseCourseProject

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Pouria Azad</title>
-  <meta content="This is a resume website for Pouria Azad, where you can find his work experience, activities, and contact links." name="description">
+  <meta
+    content="This is a resume website for Pouria Azad, where you can find his work experience, activities, and contact links."
+    name="description">
   <meta content="pouria-azad pouria azad پوریا آزاد" name="keywords">
 
   <!-- Favicons -->
   <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
   <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png" type="image/png">
-  
+
 
   <!-- Google Fonts -->
   <link
@@ -344,9 +346,9 @@
               <h4>Ceo &amp; Founder</h4>
             </div>
           </div> -->
-          <!-- End testimonial item -->
+    <!-- End testimonial item -->
 
-          <!-- <div class="swiper-slide">
+    <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -358,9 +360,9 @@
               <h4>Freelancer</h4>
             </div>
           </div> -->
-          <!-- End testimonial item -->
+    <!-- End testimonial item -->
 
-          <!-- <div class="swiper-slide">
+    <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -372,26 +374,23 @@
               <h4>Entrepreneur</h4>
             </div>
           </div> -->
-          <!-- End testimonial item -->
-          <p></p>
-        </div>
-        <div class="swiper-pagination"></div>
-      </div>
+    <!-- End testimonial item -->
+    <p></p>
+    </div>
+    <div class="swiper-pagination"></div>
+    </div>
 
-      <div class="owl-carousel testimonials-carousel">
+    <div class="owl-carousel testimonials-carousel">
 
-      </div>
+    </div>
 
     </div><!-- End Testimonials  -->
 
-
     <!-- ======= Interests ======= -->
     <div class="interests container">
-
       <div class="section-title">
-        <h2>About projects</h2>
+        <h2>Main projects</h2>
       </div>
-
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
@@ -407,16 +406,40 @@
             </h6>
           </div>
         </div>
-        <!-- <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+      </div>
+      <!-- <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
             <h3>Sed perspiciatis</h3>
           </div>
         </div> -->
+    </div>
+    <!-- End Interests -->
 
-
+    <!-- ======= Interests ======= -->
+    <div class="interests container">
+      <div class="section-title">
+        <h2>Practice projects</h2>
       </div>
-      <!-- End Interests -->
+      <div class="row">
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/Database-course-project"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>databaseCourseProject</h3>
+            </a>
+            <h6 class="mt-1">This project was for a university database course where I implemented a database for an
+              e-learning course selling website similar to Coursera in three phases. In the first phase, I identified
+              the necessary entities and relationships for the database. In the second phase, I designed the database
+              tables and defined primary and foreign keys. Finally, in the third phase, I implemented the insertion,
+              update, delete, and search operations using pure PHP along with the corresponding SQL files.
+            </h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Interests -->
 
   </section><!-- End About Section -->
 
@@ -781,6 +804,15 @@
           </div>
           </a>
         </div>
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <a href="http://youtube.com/@pouria-azad">
+              <i class="bx bi-youtube"></i>
+              <h3>My Youtube</h3>
+              <p>@pouria-azad</p>
+          </div>
+          </a>
+        </div>
 
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
@@ -793,7 +825,7 @@
           </a>
         </div>
 
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+        <div class="col-md-12 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <a href="tel:+989908595090">
               <i class="bx bx-phone-call"></i>
