--- a/index_per.html
+++ b/index_per.html
@@ -6,7 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>پوریا آزاد</title>
-  <meta content="اینجا وب سایت رسمی پوریا آزاد هست که در آن جزئیات سوابق کاری، فعالیت‌ها و پیوندهای ارتباطی پوریا آزاد قرار داده شده است. در این سایت می‌توانید بازدیدی از سوابق، انجام‌ها و اطلاعات تماس با پوریا آزاد داشته باشید." name="description">
+  <meta
+    content="اینجا وب سایت رسمی پوریا آزاد هست که در آن جزئیات سوابق کاری، فعالیت‌ها و پیوندهای ارتباطی پوریا آزاد قرار داده شده است. در این سایت می‌توانید بازدیدی از سوابق، انجام‌ها و اطلاعات تماس با پوریا آزاد داشته باشید."
+    name="description">
   <meta content="pouria-azad pouria azad پوریا آزاد" name="keywords">
 
   <!-- Favicons -->
@@ -47,7 +49,7 @@
       <h1><a href="index.html">پوریا آزاد</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>من یک  <span>backend developer</span> هستم.</h2>
+      <h2>من یک <span>backend developer</span> هستم.</h2>
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">صفحه اول</a></li>
@@ -89,26 +91,29 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Backend Developer</h3>
           <p class="fst-italic">
-             یک برنامه نویس و دانشجوی خلاق و کنجکاو کامپیوتر که بدنبال یادگیری دانش و کشف چیزهای جدیده 🚀.
+            یک برنامه نویس و دانشجوی خلاق و کنجکاو کامپیوتر که بدنبال یادگیری دانش و کشف چیزهای جدیده 🚀.
           </p>
           <br>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>تاریخ تولد: </strong> <span>21 مهر 1380</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>وبسایت: </strong> <span style="direction: ltr;">pouria-azad.ir</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>شماره تماس: </strong> <span style="direction: ltr;">+98 990 859 5090</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>وبسایت: </strong> <span
+                    style="direction: ltr;">pouria-azad.ir</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>شماره تماس: </strong> <span style="direction: ltr;">+98
+                    990 859 5090</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>استان: </strong> <span>خراسان رضوی</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li> -->
-                <li><i class="bi bi-chevron-right"></i> <strong>مدرک: </strong> <span> دانشجو کارشناسی مهندسی کامپیوتر </span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>مدرک: </strong> <span> دانشجو کارشناسی مهندسی کامپیوتر
+                  </span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>ایمیل: </strong>
                   <span>pooria.azad53@gmail.com</span>
                 </li>
-              <!--  <li><i class="bi bi-chevron-right"></i> <strong>کار فریلنس:</strong> <span>Available</span></li> -->
+                <!--  <li><i class="bi bi-chevron-right"></i> <strong>کار فریلنس:</strong> <span>Available</span></li> -->
               </ul>
             </div>
           </div>
@@ -164,7 +169,7 @@
         <h2>مهارت ها</h2>
       </div>
 
-      <div style="direction: ltr;"   class="row skills-content">
+      <div style="direction: ltr;" class="row skills-content">
 
         <div class="col-lg-6">
 
@@ -388,7 +393,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>پروژه ها</h2>
+        <h2>پروژه های اصلی</h2>
       </div>
 
       <div class="row">
@@ -411,10 +416,35 @@
             <h3>Sed perspiciatis</h3>
           </div>
         </div> -->
-
-
       </div>
-      <!-- End Interests -->
+    </div>
+    <!-- End Interests -->
+
+    <!-- ======= Interests ======= -->
+    <div class="interests container">
+      <div class="section-title">
+        <h2>پروژه های تمرینی</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/Database-course-project"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>databaseCourseProject</h3>
+            </a>
+            <h6 class="mt-1">این پروژه برای درس پایگاه داده دانشگاه بود که باید در آن یک پایگاه داده برای یک سایت فروش
+              دوره‌های آموزشی مشابه Coursera را در سه فاز پیاده‌سازی میکردم. در فاز اول، موجودیت‌ها و روابط مورد نیاز
+              برای پایگاه داده را شناسایی مشخص کردم. در فاز دوم، جداول پایگاه داده را طراحی و کلیدهای اصلی و خارجی را
+              تعریف کردم. در نهایت فاز سوم، کدها و فایل SQL را برای عملیات درج، به‌روزرسانی، حذف و جستجو با استفاده از
+              php pure پیاده‌سازی کردم.
+            </h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Interests -->
+
 
   </section><!-- End About Section -->
 
@@ -779,7 +809,15 @@
           </div>
           </a>
         </div>
-
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <a href="http://youtube.com/@pouria-azad">
+              <i class="bx bi-youtube"></i>
+              <h3>یوتیوب من</h3>
+              <p style="direction: ltr;">@pouria-azad</p>
+          </div>
+          </a>
+        </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <!--            <i class="bx bx-envelope"></i> -->
@@ -790,8 +828,7 @@
           </div>
           </a>
         </div>
-
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+        <div class="col-md-12 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <a href="tel:+989908595090">
               <i class="bx bx-phone-call"></i>
