add new project

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Projects</p>
           </div>
@@ -437,7 +437,22 @@
             </h6>
           </div>
         </div>
-      </div>
+      
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center; flex-wrap: wrap;"
+              href="https://github.com/pouria-azad/Programming-basics-lesson-project" target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>ProgrammingBasicsCourseProject</h3>
+            </a>
+            <h6 class="mt-1">In this project for the Computer Programming Fundamentals course, which served as my first
+              major project in the first semester, I was able to implement a highly attractive store using C++
+              programming language and object-oriented programming principles. This project consisted of three key
+              sections: product purchasing, vendor recruitment, and overall store management.
+            </h6>
+          </div>
+        </div>
+      
     </div>
     <!-- End Interests -->
 
