--- a/index_per.html
+++ b/index_per.html
@@ -144,7 +144,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>تعداد پروژه ها</p>
           </div>
@@ -438,6 +438,20 @@
               برای پایگاه داده را شناسایی مشخص کردم. در فاز دوم، جداول پایگاه داده را طراحی و کلیدهای اصلی و خارجی را
               تعریف کردم. در نهایت فاز سوم، کدها و فایل SQL را برای عملیات درج، به‌روزرسانی، حذف و جستجو با استفاده از
               php pure پیاده‌سازی کردم.
+            </h6>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;  flex-wrap: wrap;"
+              href="https://github.com/pouria-azad/Programming-basics-lesson-project" target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>ProgrammingBasicsCourseProject</h3>
+            </a>
+            <h6 class="mt-1">در این پروژه درس مبانی برنامه‌نویسی کامپیوتر، که به‌عنوان اولین پروژه بزرگ من در ترم یکم
+              به
+              حساب میومد، توانستم با استفاده از زبان C++ و بهره‌گیری از شی‌گرایی، یک فروشگاه بسیار جذاب را پیاده‌سازی
+              کنم. این پروژه شامل سه بخش مهم: خرید محصولات، استخدام فروشندگان و مدیریت کلی فروشگاه را شامل میشد.
             </h6>
           </div>
         </div>
