add laravel project

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Projects</p>
           </div>
@@ -399,14 +399,26 @@
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>UniCoursePlanner</h3>
             </a>
-            <h6 class="mt-1">This Python program is used for scheduling the presence of university professors using the
+            <h6 class="mt-1">“This Python program is used for scheduling the presence of university professors using the
               CSP forward checking algorithm. It generates possible weekly schedules for professors in the form of HTML
               output files, ensuring there are no conflicts and includes professors' availability hours at the
-              university.
+              university.”
+            </h6>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="Laravel-online-shop.html#english"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>Laravel-online-Shop</h3>
+            </a>
+            <h6 class="mt-1">“As a developer, I customized the Metronic template for a personal online e-commerce website and implemented the back-end of this site using the Laravel framework.”
             </h6>
           </div>
         </div>
       </div>
+      
       <!-- <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
@@ -429,11 +441,11 @@
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>databaseCourseProject</h3>
             </a>
-            <h6 class="mt-1">This project was for a university database course where I implemented a database for an
+            <h6 class="mt-1">“This project was for a university database course where I implemented a database for an
               e-learning course selling website similar to Coursera in three phases. In the first phase, I identified
               the necessary entities and relationships for the database. In the second phase, I designed the database
               tables and defined primary and foreign keys. Finally, in the third phase, I implemented the insertion,
-              update, delete, and search operations using pure PHP along with the corresponding SQL files.
+              update, delete, and search operations using pure PHP along with the corresponding SQL files.”
             </h6>
           </div>
         </div>
@@ -445,10 +457,10 @@
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>ProgrammingBasicsCourseProject</h3>
             </a>
-            <h6 class="mt-1">In this project for the Computer Programming Fundamentals course, which served as my first
+            <h6 class="mt-1">“In this project for the Computer Programming Fundamentals course, which served as my first
               major project in the first semester, I was able to implement a highly attractive store using C++
               programming language and object-oriented programming principles. This project consisted of three key
-              sections: product purchasing, vendor recruitment, and overall store management.
+              sections: product purchasing, vendor recruitment, and overall store management.”
             </h6>
           </div>
         </div>
