--- a/index_per.html
+++ b/index_per.html
@@ -144,7 +144,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>تعداد پروژه ها</p>
           </div>
@@ -404,12 +404,25 @@
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>UniCoursePlanner</h3>
             </a>
-            <h6 class="mt-1">این برنامه پایتون برای برنامه‌ریزی حضور اساتید دانشگاه با استفاده از الگوریتم
+            <h6 class="mt-1">“این برنامه پایتون برای برنامه‌ریزی حضور اساتید دانشگاه با استفاده از الگوریتم
               CSP_Forward_Checking استفاده می‌شود و برنامه‌های هفتگی ممکن برای اساتید با خروجی .html تولید می‌کند که
-              تداخلی نداشته باشند و شامل ساعت‌های حضور اساتید در دانشگاه است.
+              تداخلی نداشته باشند و شامل ساعت‌های حضور اساتید در دانشگاه است.”
             </h6>
           </div>
         </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="Laravel-online-shop.html#persian"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>Laravel-online-Shop</h3>
+            </a>
+            <h6 class="mt-1">“من به عنوان یک توسعه‌دهنده، قالب مترونیک را برای یک سایت فروشگاهی آنلاین شخصی سازی کردم و با استفاده از فریم‌ورک لاراول، بخش بک‌اند این سایت را پیاده‌سازی کردم.”
+            </h6>
+          </div>
+        </div>
+      </div>
         <!-- <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
@@ -433,11 +446,11 @@
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>databaseCourseProject</h3>
             </a>
-            <h6 class="mt-1">این پروژه برای درس پایگاه داده دانشگاه بود که باید در آن یک پایگاه داده برای یک سایت فروش
+            <h6 class="mt-1">“این پروژه برای درس پایگاه داده دانشگاه بود که باید در آن یک پایگاه داده برای یک سایت فروش
               دوره‌های آموزشی مشابه Coursera را در سه فاز پیاده‌سازی میکردم. در فاز اول، موجودیت‌ها و روابط مورد نیاز
               برای پایگاه داده را شناسایی مشخص کردم. در فاز دوم، جداول پایگاه داده را طراحی و کلیدهای اصلی و خارجی را
               تعریف کردم. در نهایت فاز سوم، کدها و فایل SQL را برای عملیات درج، به‌روزرسانی، حذف و جستجو با استفاده از
-              php pure پیاده‌سازی کردم.
+              php pure پیاده‌سازی کردم.”
             </h6>
           </div>
         </div>
@@ -448,10 +461,10 @@
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>ProgrammingBasicsCourseProject</h3>
             </a>
-            <h6 class="mt-1">در این پروژه درس مبانی برنامه‌نویسی کامپیوتر، که به‌عنوان اولین پروژه بزرگ من در ترم یکم
+            <h6 class="mt-1">“در این پروژه درس مبانی برنامه‌نویسی کامپیوتر، که به‌عنوان اولین پروژه بزرگ من در ترم یکم
               به
               حساب میومد، توانستم با استفاده از زبان C++ و بهره‌گیری از شی‌گرایی، یک فروشگاه بسیار جذاب را پیاده‌سازی
-              کنم. این پروژه شامل سه بخش مهم: خرید محصولات، استخدام فروشندگان و مدیریت کلی فروشگاه را شامل میشد.
+              کنم. این پروژه شامل سه بخش مهم: خرید محصولات، استخدام فروشندگان و مدیریت کلی فروشگاه را شامل میشد.”
             </h6>
           </div>
         </div>
