add new changes

--- a/index_per.html
+++ b/index_per.html
@@ -413,7 +413,7 @@
 
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <a style="display:flex; align-items:center;" href="Laravel-online-shop.html#persian"
+            <a style="display:flex; align-items:center;" href="laravel-online-shop.html#persian"
               target="_blank;">
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>Laravel-online-Shop</h3>
