--- a/Laravel-online-Shop.html
+++ b/Laravel-online-Shop.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pouria Azad</title>
+  <title>Laravel Online Shop</title>
   <meta
     content="This is a resume website for Pouria Azad, where you can find his work experience, activities, and contact links."
     name="description">
