--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         </div>
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <a style="display:flex; align-items:center;" href="laravel-online-shop.html#english"
+            <a style="display:flex; align-items:center;" href="Laravel-online-Shop.html#english"
               target="_blank;">
               <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
               <h3>Laravel-online-Shop</h3>
