--- a/index.html
+++ b/index.html
@@ -417,6 +417,21 @@
             </h6>
           </div>
         </div>
+	      <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="Laravel-online-Shop.html#english"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>TelegramBot</h3>
+            </a>
+	    <h6 class="mt-1">“Using the pure PHP programming language, I developed a Telegram bot for our university's Computer Engineering group. This bot has various capabilities tailored to our group's needs.
+One of the primary functions of this bot is to update the names and usernames of the members in the Telegram group. The bot automatically updates these details based on the information received from Telegram.
+In addition, the bot can maintain a comprehensive list of group members in its database. This feature allows us to have a complete list of student members in the group at our disposal.
+The bot also has the ability to store information such as the year of entry and the level of study of the students. This information can be very useful for the group administrator and assist them in better managing the group.
+Thus, with this Telegram bot, we can easily and automatically manage the information related to the members of our university's Computer Engineering group.”
+	    </h6>
+          </div>
+        </div>
       </div>
       
       <!-- <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
