--- a/index_per.html
+++ b/index_per.html
@@ -422,6 +422,21 @@
             </h6>
           </div>
         </div>
+	           <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/Telegram-bot"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>TelegramBot</h3>
+            </a>
+	    <h6 class="mt-1">“من با استفاده از زبان برنامه‌نویسی PHP در حالت خالص، یک ربات تلگرامی را برای گروه مهندسی کامپیوتر دانشگاهمان طراحی و پیاده‌سازی کردم. این ربات با توجه به نیازهای ما در گروه، قابلیت‌های متنوعی دارد.
+یکی از وظایف اصلی این ربات، بروزرسانی نام و نام کاربری اعضای گروه تلگرامی است. این ربات به صورت خودکار و بر اساس اطلاعات دریافتی از تلگرام، نام و نام کاربری اعضا را بروزرسانی می‌کند.
+علاوه بر این، ربات توانایی نگهداری لیست کاملی از اعضای گروه در دیتابیس خود را دارد. این امکان باعث می‌شود تا ما بتوانیم لیست کاملی از دانشجویان عضو گروه را در اختیار داشته باشیم.
+این ربات همچنین قابلیت نگهداری اطلاعاتی مانند سال ورود و مقطع تحصیلی دانشجویان را نیز دارد. این اطلاعات می‌تواند برای مدیر گروه بسیار مفید باشد و او را در مدیریت بهتر گروه یاری رساند.
+به این ترتیب، با استفاده از این ربات تلگرامی، ما می‌توانیم به راحتی و به صورت خودکار، اطلاعات مربوط به اعضای گروه مهندسی کامپیوتر دانشگاهمان را مدیریت کنیم.”
+	    </h6>
+          </div>
+        </div>
       </div>
         <!-- <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
