--- a/index_per.html
+++ b/index_per.html
@@ -126,7 +126,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>تعداد پروژه ها</p>
           </div>
@@ -257,7 +257,33 @@
             </h6>
           </div>
         </div>
-	           <div class="col-lg-3 col-md-4">
+	           
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/load-balancing"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>Load-balancing</h3>
+            </a>
+	    <h6 class="mt-1">“من در این پروژه الگوریتم راند-رابین را با استفاده از Docker Swarm پیاده‌سازی کردم. این الگوریتم برای مدیریت توزیع وظایف در خوشه‌ی Swarm استفاده شده است و بهینه‌سازی استفاده از منابع و تعادل بار را بهبود می‌بخشد. این پیاده‌سازی به چالش‌های مختلفی مانند مقیاس‌پذیری پویا و تحمل خطا پرداخته است تا ارائه‌ی خدمات قابل اطمینان و کارآمد را تضمین کند.”
+	    </h6>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/user-logs"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>User-Logs</h3>
+            </a>
+	    <h6 class="mt-1">در این پروژه من پکیج  binafy/laravel-user-monitoring رو توسعه دادم و استفاده از چند guard رو به این پکیج افزودم”
+	    </h6>
+          </div>
+        </div>
+
+
+        <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/Telegram-bot"
               target="_blank;">
@@ -272,6 +298,7 @@
 	    </h6>
           </div>
         </div>
+
       </div>
       </div>
     </div>
@@ -283,6 +310,20 @@
         <h2>پروژه های تمرینی</h2>
       </div>
       <div class="row">
+
+        
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center; flex-wrap: wrap;"
+              href="https://github.com/pouria-azad/simple-library" target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>simple-library</h3>
+            </a>
+            <h6 class="mt-1">“یک کتابخونه ساده که با php pure نوشتم”
+            </h6>
+          </div>
+        </div>
+
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/Database-course-project"
@@ -447,8 +488,10 @@
   </div>
 
   <!-- Vendor JS Files -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
-
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
