--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Projects</p>
           </div>
@@ -258,7 +258,33 @@
             </h6>
           </div>
         </div>
-	      <div class="col-lg-3 col-md-4">
+	      
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/load-balancing"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>Load-balancing</h3>
+            </a>
+	    <h6 class="mt-1">“This project implemented the round robin algorithm within the context of Docker Swarm. The algorithm was utilized to manage the distribution of tasks across the Swarm cluster, optimizing resource utilization and load balancing. The implementation addressed various challenges, such as dynamic scaling and fault tolerance, to ensure reliable and efficient service delivery.”
+	    </h6>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/user-logs"
+              target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>User-Logs</h3>
+            </a>
+	    <h6 class="mt-1">“Within this project, I developed the binafy/laravel-user-monitoring package and added the use of several guards to this package.”
+	    </h6>
+          </div>
+        </div>
+
+
+        <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/Telegram-bot"
               target="_blank;">
@@ -283,6 +309,20 @@ Thus, with this Telegram bot, we can easily and automatically manage the informa
         <h2>Practice projects</h2>
       </div>
       <div class="row">
+
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <a style="display:flex; align-items:center; flex-wrap: wrap;"
+              href="https://github.com/pouria-azad/simple-library" target="_blank;">
+              <i class="ri-calendar-todo-line" style="color: #ffbb2c;"></i>
+              <h3>simple-library</h3>
+            </a>
+            <h6 class="mt-1">“A simple library that I wrote with php pure”
+            </h6>
+          </div>
+        </div>
+
+
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <a style="display:flex; align-items:center;" href="https://github.com/pouria-azad/Database-course-project"
@@ -454,11 +494,11 @@ Thus, with this Telegram bot, we can easily and automatically manage the informa
   </div>
 
   <!-- Vendor JS Files -->
-  <!-- <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script> -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js"></script>
   <!-- <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
   <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
