--- a/index.html
+++ b/index.html
@@ -166,31 +166,87 @@
           </div>
 
           <div class="progress">
-            <span class="skill">JavaScript <i class="val">1/5</i></span>
+            <span class="skill">JavaScript <i class="val">2/5</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
+
         </div>
 
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">PHP <i class="val">4/5</i></span>
+            <span class="skill">MongoDB <i class="val">2/5</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Laravel <i class="val">1/5</i></span>
+            <span class="skill">ExpressJS <i class="val">1/5</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
+
+          <div class="progress">
+            <span class="skill">Angular <i class="val">2/5</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
+        </div>
+      
+      <div class="row skills-content"></div>
+          <div class="col-lg-6">
+
+            <div class="progress">
+              <span class="skill">PHP <i class="val">4/5</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+  
+            <div class="progress">
+              <span class="skill">PhpMyAdmin <i class="val">4/5</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Laravel <i class="val">4/5</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+ 
+          </div>
+
+
+        <div class="col-lg-6">
+
+          <div class="progress">
+            <span class="skill">Socket.IO Lib <i class="val">2/5</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <br>
+      <div class="row skills-content">
 
           <div class="progress">
             <span class="skill">C++ <i class="val">3/5</i></span>
@@ -208,10 +264,25 @@
             </div>
           </div>
 
+        <div class="progress">
+          <span class="skill">GNU/Linux <i class="val">2/5</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
+        </div>
 
+        <div class="progress">
+          <span class="skill">Docker <i class="val">3/5</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
         </div>
 
       </div>
+
+    </div>
 
     </div><!-- End Skills -->
 
@@ -494,11 +565,11 @@ Thus, with this Telegram bot, we can easily and automatically manage the informa
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js"></script>
   <!-- <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<!--  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>-->
+<!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js"></script>-->
+<!--  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
   <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
