--- a/index_per.html
+++ b/index_per.html
@@ -163,14 +163,44 @@
           </div>
 
           <div class="progress">
-            <span class="skill">JavaScript <i class="val">1/5</i></span>
+            <span class="skill">JavaScript <i class="val">2/5</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-lg-6">
+
+          <div class="progress">
+            <span class="skill">MongoDB <i class="val">2/5</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">ExpressJS <i class="val">1/5</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
+
+          <div class="progress">
+            <span class="skill">Angular <i class="val">2/5</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+              </div>
+            </div>
+          </div>
+
         </div>
 
+        <div style="direction: ltr;" class="row skills-content"></div>
         <div class="col-lg-6">
 
           <div class="progress">
@@ -182,23 +212,28 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Laravel <i class="val">1/5</i></span>
+            <span class="skill">PhpMyAdmin <i class="val">4/5</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">C++ <i class="val">3/5</i></span>
+            <span class="skill">Laravel <i class="val">4/5</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
 
+        </div>
+
+
+        <div class="col-lg-6">
+
           <div class="progress">
-            <span class="skill">Python <i class="val">2/5</i></span>
+            <span class="skill">Socket.IO Lib <i class="val">2/5</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -206,9 +241,47 @@
           </div>
 
 
+
+        </div>
+      </div>
+      <br>
+      <div style="direction: ltr;" class="row skills-content">
+
+        <div class="progress">
+          <span class="skill">C++ <i class="val">3/5</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
+        </div>
+
+        <div class="progress">
+          <span class="skill">Python <i class="val">2/5</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
+        </div>
+
+        <div class="progress">
+          <span class="skill">GNU/Linux <i class="val">2/5</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
+        </div>
+
+        <div class="progress">
+          <span class="skill">Docker <i class="val">3/5</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
         </div>
 
       </div>
+
+    </div>
 
     </div><!-- End Skills -->
 
@@ -488,10 +561,7 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
