--- a/index.html
+++ b/index.html
@@ -567,11 +567,11 @@ Thus, with this Telegram bot, we can easily and automatically manage the informa
   <!-- Vendor JS Files -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script> -->
   <!-- <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script> -->
-<!--  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>-->
-<!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js"></script>-->
-<!--  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>-->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
+
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
